ADD  video generation from images and enhance video generation request/response models

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ uvicorn[standard]==0.38.0
 pydantic==2.12.5
 pydantic-settings==2.1.0
 
-# Google Gemini
-google-generativeai==0.3.1
+# Google Gemini (nueva API con soporte para video)
+google-genai
 
 # Image processing
 Pillow==10.0.1
