--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pydantic-settings==2.1.0
 google-genai
 
 # Image processing
-Pillow==10.0.1
+Pillow>=10.4.0
 requests==2.31.0
 
 # Environment variables
