--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,26 @@
 # API Configuration
 API_HOST=0.0.0.0
 API_PORT=8000
+API_BASE_URL=http://localhost:8000
 API_TITLE=OptiGrow AI Microservice
 API_VERSION=1.0.0
 
 # Security
-API_KEY=your-secret-api-key-here
+API_KEY=your-secure-api-key-here
 
 # Gemini Configuration
 GEMINI_API_KEY=your-gemini-api-key-here
+GEMINI_PROJECT_ID=your-google-project-id
+GEMINI_LOCATION=us-central1
+GEMINI_VERTEXAI=false
 
-# CORS Settings (Laravel URL)
-ALLOWED_ORIGINS=http://localhost:8000,http://localhost:3000
+# Google Cloud Storage Configuration (para videos largos)
+# Configura estos valores si tienes un bucket de GCS para almacenar videos grandes
+GCS_BUCKET_NAME=mi-bucket-videos
+GCS_OUTPUT_PATH=videos/generated/
+
+# CORS Settings
+ALLOWED_ORIGINS=http://localhost:8000,http://localhost:3000,http://optiapp.test
 
 # Environment
 ENVIRONMENT=development
