--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,46 @@
-# FastAPI and server
-fastapi==0.122.0
-uvicorn[standard]==0.38.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+beautifulsoup4==4.14.3
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+distro==1.9.0
+fastapi==0.128.0
+google==3.0.0
+google-api-core==2.29.0
+google-auth==2.47.0
+google-cloud-core==2.5.0
+google-cloud-storage==3.8.0
+google-crc32c==1.8.0
+google-genai==1.59.0
+google-resumable-media==2.8.0
+googleapis-common-protos==1.72.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+pillow==12.1.0
+proto-plus==1.27.0
+protobuf==6.33.4
+pyasn1==0.6.2
+pyasn1_modules==0.4.2
 pydantic==2.12.5
-pydantic-settings==2.1.0
-
-# Google Gemini (nueva API con soporte para video)
-google-genai
-
-# Image processing
-Pillow>=10.4.0
-requests==2.31.0
-
-# Environment variables
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
 python-dotenv==1.2.1
-
-# HTTP client (para testing)
-httpx==0.25.2
-
-# Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
+PyYAML==6.0.3
+requests==2.32.5
+rsa==4.9.1
+sniffio==1.3.1
+soupsieve==2.8.1
+starlette==0.50.0
+tenacity==9.1.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.3
+uvicorn==0.40.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
